# pyidw

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.rst
examples/: pyidw_getting_started_tutorial.ipynb
pyidw/: idw.py
