[tool.poetry]
name = "pyidw"
version = "0.2.20"
description = "IDW interpolation library for python"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
geopandas = "^0.10.2"
Fiona = "^1.8.21"
rasterio = "^1.2.10"
sklearn = "^0.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
